@@ -3,6 +3,8 @@ Released on 2020-10-05?
 ======================================
 
 
+bpo-39050: Make Settings dialog Help button work again.
+
 bpo-32989: Add tests for editor newline_and_indent_event method.
 Remove dead code from pyparse find_good_parse_start method.
 
